third_party/flutter_litert/lib/src/bindings/tensorflow_lite_bindings_generated.dart


  late final _TfLiteXNNPackDelegateGetThreadPoolPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<TfLiteDelegate>)
        >
      >('TfLiteXNNPackDelegateGetThreadPool');
  late final _TfLiteXNNPackDelegateGetThreadPool =
      _TfLiteXNNPackDelegateGetThreadPoolPtr.asFunction<
        ffi.Pointer<ffi.Void> Function(ffi.Pointer<TfLiteDelegate>)
      >();

  /// Returns the options in the delegate.
  /// Returns NULL if the delegate is NULL.
  ///
  /// WARNING: This API is experimental and subject to change.
  ffi.Pointer<TfLiteXNNPackDelegateOptions> TfLiteXNNPackDelegateGetOptions(
    ffi.Pointer<TfLiteDelegate> delegate,
  ) {
    return _TfLiteXNNPackDelegateGetOptions(delegate);
  }

  late final _TfLiteXNNPackDelegateGetOptionsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteXNNPackDelegateOptions> Function(
            ffi.Pointer<TfLiteDelegate>,
          )
        >
      >('TfLiteXNNPackDelegateGetOptions');
  late final _TfLiteXNNPackDelegateGetOptions =
      _TfLiteXNNPackDelegateGetOptionsPtr.asFunction<
        ffi.Pointer<TfLiteXNNPackDelegateOptions> Function(
          ffi.Pointer<TfLiteDelegate>,
        )
      >();

  /// Returns the flags used for an XNNPack delegate.
  /// See documentation for TfLiteXNNPackDelegateOptions.flags.
  ///
  /// WARNING: This API is experimental and subject to change.
  int TfLiteXNNPackDelegateGetFlags(ffi.Pointer<TfLiteDelegate> delegate) {
    return _TfLiteXNNPackDelegateGetFlags(delegate);
  }

  late final _TfLiteXNNPackDelegateGetFlagsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<TfLiteDelegate>)>
      >('TfLiteXNNPackDelegateGetFlags');
  late final _TfLiteXNNPackDelegateGetFlags =
      _TfLiteXNNPackDelegateGetFlagsPtr.asFunction<
        int Function(ffi.Pointer<TfLiteDelegate>)
      >();

  /// Destroys a delegate created with `TfLiteXNNPackDelegateCreate` call.
  void TfLiteXNNPackDelegateDelete(ffi.Pointer<TfLiteDelegate> delegate) {
    return _TfLiteXNNPackDelegateDelete(delegate);
  }

  late final _TfLiteXNNPackDelegateDeletePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TfLiteDelegate>)>
      >('TfLiteXNNPackDelegateDelete');
  late final _TfLiteXNNPackDelegateDelete =
      _TfLiteXNNPackDelegateDeletePtr.asFunction<
        void Function(ffi.Pointer<TfLiteDelegate>)
      >();

  /// Creates a new weights cache that can be shared with multiple delegate
  /// instances. Prefer TfLiteXNNPackDelegateWeightsCacheCreateWithSize which can
  /// reduce memory bandwidth.
  ffi.Pointer<TfLiteXNNPackDelegateWeightsCache>
  TfLiteXNNPackDelegateWeightsCacheCreate() {
    return _TfLiteXNNPackDelegateWeightsCacheCreate();
  }

  late final _TfLiteXNNPackDelegateWeightsCacheCreatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteXNNPackDelegateWeightsCache> Function()
        >
      >('TfLiteXNNPackDelegateWeightsCacheCreate');
  late final _TfLiteXNNPackDelegateWeightsCacheCreate =
      _TfLiteXNNPackDelegateWeightsCacheCreatePtr.asFunction<
        ffi.Pointer<TfLiteXNNPackDelegateWeightsCache> Function()
      >();

  /// Creates a new weights cache with a specified initial size that can be shared
  /// with multiple delegate instances. The weights cache can hold up to size bytes
  /// without growing.
  ffi.Pointer<TfLiteXNNPackDelegateWeightsCache>
  TfLiteXNNPackDelegateWeightsCacheCreateWithSize(int size) {
    return _TfLiteXNNPackDelegateWeightsCacheCreateWithSize(size);
  }

  late final _TfLiteXNNPackDelegateWeightsCacheCreateWithSizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteXNNPackDelegateWeightsCache> Function(ffi.Size)
        >
      >('TfLiteXNNPackDelegateWeightsCacheCreateWithSize');
  late final _TfLiteXNNPackDelegateWeightsCacheCreateWithSize =
      _TfLiteXNNPackDelegateWeightsCacheCreateWithSizePtr.asFunction<
        ffi.Pointer<TfLiteXNNPackDelegateWeightsCache> Function(int)
      >();

  /// Soft-finalize a weights cache. Extra space will be left in the weights cache
  /// to allow for cache "insertion" only if it is a cache hit. This has memory
  /// overhead compared to TfLiteXNNPackDelegateWeightsCacheFinalizeHard. Use this
  /// if the number of interpreter instances using XNNPACK delegate is not fixed
  /// (e.g. created based on workload in a server daemon).
  /// Returns true on success, false on error.
  bool TfLiteXNNPackDelegateWeightsCacheFinalizeSoft(
    ffi.Pointer<TfLiteXNNPackDelegateWeightsCache> cache,
  ) {
    return _TfLiteXNNPackDelegateWeightsCacheFinalizeSoft(cache);
  }

  late final _TfLiteXNNPackDelegateWeightsCacheFinalizeSoftPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<TfLiteXNNPackDelegateWeightsCache>)
        >
      >('TfLiteXNNPackDelegateWeightsCacheFinalizeSoft');
  late final _TfLiteXNNPackDelegateWeightsCacheFinalizeSoft =
      _TfLiteXNNPackDelegateWeightsCacheFinalizeSoftPtr.asFunction<
        bool Function(ffi.Pointer<TfLiteXNNPackDelegateWeightsCache>)
      >();

  /// Hard-finalize a weights cache, cache is effectively frozen and no more cache
  /// operations are allowed. Memory is resized to smallest possible. Use this if
  /// the number of interpreter instances using XNNPACK delegate can be fixed and
  /// all creation of instances can happen up front. This has the lowest memory
  /// usage.
  /// Returns true on success, false on error.
  bool TfLiteXNNPackDelegateWeightsCacheFinalizeHard(
    ffi.Pointer<TfLiteXNNPackDelegateWeightsCache> cache,
  ) {
    return _TfLiteXNNPackDelegateWeightsCacheFinalizeHard(cache);
  }

  late final _TfLiteXNNPackDelegateWeightsCacheFinalizeHardPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<TfLiteXNNPackDelegateWeightsCache>)
        >
      >('TfLiteXNNPackDelegateWeightsCacheFinalizeHard');
  late final _TfLiteXNNPackDelegateWeightsCacheFinalizeHard =
      _TfLiteXNNPackDelegateWeightsCacheFinalizeHardPtr.asFunction<
        bool Function(ffi.Pointer<TfLiteXNNPackDelegateWeightsCache>)
      >();

  /// Destroys a weights cache created with
  /// `TfLiteXNNPackDelegateWeightsCacheCreate` call.
  void TfLiteXNNPackDelegateWeightsCacheDelete(
    ffi.Pointer<TfLiteXNNPackDelegateWeightsCache> cache,
  ) {
    return _TfLiteXNNPackDelegateWeightsCacheDelete(cache);
  }

  late final _TfLiteXNNPackDelegateWeightsCacheDeletePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<TfLiteXNNPackDelegateWeightsCache>)
        >
      >('TfLiteXNNPackDelegateWeightsCacheDelete');
  late final _TfLiteXNNPackDelegateWeightsCacheDelete =
      _TfLiteXNNPackDelegateWeightsCacheDeletePtr.asFunction<
        void Function(ffi.Pointer<TfLiteXNNPackDelegateWeightsCache>)
      >();

  /// Populates TfLiteGpuDelegateOptionsV2 as follows:
  /// is_precision_loss_allowed = false
  /// inference_preference = TFLITE_GPU_INFERENCE_PREFERENCE_FAST_SINGLE_ANSWER
  /// priority1 = TFLITE_GPU_INFERENCE_PRIORITY_MAX_PRECISION
  /// priority2 = TFLITE_GPU_INFERENCE_PRIORITY_AUTO
  /// priority3 = TFLITE_GPU_INFERENCE_PRIORITY_AUTO
  /// experimental_flags = TFLITE_GPU_EXPERIMENTAL_FLAGS_ENABLE_QUANT
  /// max_delegated_partitions = 1
  TfLiteGpuDelegateOptionsV2 TfLiteGpuDelegateOptionsV2Default() {
    return _TfLiteGpuDelegateOptionsV2Default();
  }

  late final _TfLiteGpuDelegateOptionsV2DefaultPtr =
      _lookup<ffi.NativeFunction<TfLiteGpuDelegateOptionsV2 Function()>>(
        'TfLiteGpuDelegateOptionsV2Default',
      );
  late final _TfLiteGpuDelegateOptionsV2Default =
      _TfLiteGpuDelegateOptionsV2DefaultPtr.asFunction<
        TfLiteGpuDelegateOptionsV2 Function()
      >();

  /// Creates a new delegate instance that need to be destroyed with
  /// TfLiteGpuDelegateV2Delete when delegate is no longer used by TFLite.
  ///
  /// This delegate encapsulates multiple GPU-acceleration APIs under the hood to
  /// make use of the fastest available on a device.
  ///
  /// When `options` is set to `nullptr`, then default options are used.
  ///
  /// `TfLiteGpuDelegateV2Create` creates an instance for use with the synchronous
  /// API.  `TfLiteGpuDelegateV2CreateAsync` creates an instance for use with the
  /// asynchronous API.
  ffi.Pointer<TfLiteDelegate> TfLiteGpuDelegateV2Create(
    ffi.Pointer<TfLiteGpuDelegateOptionsV2> options,
  ) {
    return _TfLiteGpuDelegateV2Create(options);
  }

  late final _TfLiteGpuDelegateV2CreatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteDelegate> Function(
            ffi.Pointer<TfLiteGpuDelegateOptionsV2>,
          )
        >
      >('TfLiteGpuDelegateV2Create');
  late final _TfLiteGpuDelegateV2Create =
      _TfLiteGpuDelegateV2CreatePtr.asFunction<
        ffi.Pointer<TfLiteDelegate> Function(
          ffi.Pointer<TfLiteGpuDelegateOptionsV2>,
        )
      >();

  /// Destroys a delegate created with `TfLiteGpuDelegateV2Create` call.
  void TfLiteGpuDelegateV2Delete(ffi.Pointer<TfLiteDelegate> delegate) {
    return _TfLiteGpuDelegateV2Delete(delegate);
  }

  late final _TfLiteGpuDelegateV2DeletePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TfLiteDelegate>)>
      >('TfLiteGpuDelegateV2Delete');
  late final _TfLiteGpuDelegateV2Delete =
      _TfLiteGpuDelegateV2DeletePtr.asFunction<
        void Function(ffi.Pointer<TfLiteDelegate>)
      >();

  ffi.Pointer<TfLiteDelegate> tflite_plugin_create_delegate(
    ffi.Pointer<ffi.Pointer<ffi.Char>> options_keys,
    ffi.Pointer<ffi.Pointer<ffi.Char>> options_values,
    int num_options,
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>
    report_error,
  ) {
    return _tflite_plugin_create_delegate(
      options_keys,
      options_values,
      num_options,
      report_error,
    );
  }

  late final _tflite_plugin_create_delegatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteDelegate> Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Size,
            ffi.Pointer<
              ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>
            >,
          )
        >
      >('tflite_plugin_create_delegate');
  late final _tflite_plugin_create_delegate = _tflite_plugin_create_delegatePtr
      .asFunction<
        ffi.Pointer<TfLiteDelegate> Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          int,
          ffi.Pointer<
            ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>
          >,
        )
      >();

  void tflite_plugin_destroy_delegate(ffi.Pointer<TfLiteDelegate> delegate) {
    return _tflite_plugin_destroy_delegate(delegate);
  }

  late final _tflite_plugin_destroy_delegatePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TfLiteDelegate>)>
      >('tflite_plugin_destroy_delegate');
  late final _tflite_plugin_destroy_delegate =
      _tflite_plugin_destroy_delegatePtr
          .asFunction<void Function(ffi.Pointer<TfLiteDelegate>)>();
}

final class TfLiteOperator extends ffi.Opaque {}
